task-02: добавлен сервис gateway
