# shared/pkg/openapi/gateway/v1/oas_request_encoders_gen.go
@@ -11,7 +11,7 @@ import (
 )
 
 func encodeBoardCreateRequest(
-	req CreateBoard,
+	req *CreateBoardRequestBody,
 	r *http.Request,
 ) error {
 	const contentType = "application/json"
